--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header id="cabecera">
         <div id="logo">
           <img src="img/logo.png" alt="css3" />
-          <h1>master front-end</h1>
+          <h1>master back-end</h1>
         </div>
       </header>
       <!--Menu-->
