Actualizacion del Home en menu inicio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!--Menu-->
       <nav id="menu">
         <ul>
-          <li><a href="#">inicio</a></li>
+          <li><a href="#">Home</a></li>
           <li>
             <a href="#">contenido</a>
             <ul>
