--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <li>
             <a href="#">contenido</a>
             <ul>
+              <li><a href="#">Php</a></li>
               <li><a href="#">css</a></li>
-              <li><a href="#">css</a></li>
-              <li><a href="#">css</a></li>
+              <li><a href="#">HTML</a></li>
             </ul>
           </li>
           <li><a href="#">inicio</a></li>
